--- a/2_html/resume.html
+++ b/2_html/resume.html
@@ -19,7 +19,7 @@
     <tbody>
       <!-- <tr align="center"> -->
       <tr>
-        <td><img src="mustang.jpg" width="200px" alt="mustang" aling="center"></td>
+        <td width="33%"><img src="mustang.jpg" width="200px" alt="mustang" align="center"></td>
         <td><strong>Local Address</strong><br>Units 1503-1505 15th Floor,<br>Park Centerale,Asiatown IT Park,<br> Lahug, Cebu City</td>
         <td><strong>Permanent Address</strong><br>Unit 301 Chato Kachigawa <br>Yamatodori 1-15 Kasugaishi <br>Aichi Prefecture </td>
       </tr>
