--- a/2_html/resume.html
+++ b/2_html/resume.html
@@ -42,7 +42,7 @@
       </tr>
 
       <tr>
-        <td align="left"><div><strong>I was a train mechanic <br><em>東海交通機械（株）1-1 Nagara town Nakagawa Nagoya City Aichi Japan </em></td>
+        <td align="left"><div><strong><br><em>東海交通機械（株）1-1 Nagara town Nakagawa Nagoya City Aichi Japan </em></td>
         <!-- <td><div></div></td> -->
         <td align="right" colspan="2"> Started 2012 >> 2018 </td>
       </tr>
@@ -50,16 +50,16 @@
       <tr>
         <td colspan="3">
           <ul>
-            <li>I had been working for train mechanic since 2012-2018. Level one mechanic. I was a team leader.</li>
+            <li>I was a train mechanic. I had been working for train mechanic since 2012-2018. Level one mechanic. I was a team leader.</li>
             <li>Diesel engin OH,Drive shaft OH,Transmission OH,Slowdown mission OH, Take off parts of train and between body to flame.</li>
           </ul>
         </td>
       </tr>
 
-      <tr>
-        <td align="left"><div><strong>Null</td>
+      <!-- <tr>
+        <td align="left"><div><strong>Null</td> -->
         <!-- <td><div></div></td> -->
-        <td align="right" colspan="2"> Null >> Null </td>
+        <!-- <td align="right" colspan="2"> Null >> Null </td>
       </tr>
 
       <tr>
@@ -69,7 +69,7 @@
             <li>Null</li>
           </ul>
         </td>
-      </tr>
+      </tr> -->
 
       <tr bgcolor="lightgray" width="100%">
         <h2><td colspan="3"><strong>INTEREST/VOLUNTEER</strong></td></h2>
@@ -94,7 +94,8 @@
         <td colspan="3">
           <ul>
             <li>Technical high school Aichi 2009-2012</li>
-            <li>Null</li>
+            <li>Chita Junior High School Kasugi City 2006-2009</li>
+            <li>Sanno Elementary School Kasugi City 2000-2006</li>
           </ul>
         </td>
       </tr>
