--- a/4_jquery/jsbeginner2/index.html
+++ b/4_jquery/jsbeginner2/index.html
@@ -55,9 +55,10 @@
 
 
       //#3
-      console.log(myStack[myStack.length-5]);
-      console.log(myStack[myStack.length-6]);
-      // console.log(myStack);
+      console.log(myStack[myStack.length / 2]);
+      // console.log(myStack[myStack.length-5]);
+      // console.log(myStack[myStack.length-6]);
+      console.log(myStack);
       // var splice = myStack.splice(4,2);
       // console.log(splice);
 
