--- a/4_jquery/jsbeginner3/index.html
+++ b/4_jquery/jsbeginner3/index.html
@@ -45,7 +45,15 @@
 
         }
 
+        var sum = getSum(2,3);
 
+      function getDiff(y,x) {
+        return x - y;
+      }
+
+      var c = 5;
+      var d = 3;
+      console.log(getDiff(c,d));
 
       console.log(getSum(x=300,z=700));
 
@@ -69,6 +77,25 @@
       }
 
       }
+
+
+      // 3------ it is from Carl
+
+      var getLnumber = [12,45,62,12,1,15];
+
+      function getLargestNumber(max){
+        return Math.max(...max);
+      }
+
+      function getSmallestNumber(min){
+        return Math.min(...min);
+      }
+
+      console.log(getLargestNumber(getLnumber));
+      console.log(getSmallestNumber(getLnumber));
+
+
+
 
     </script>
   </body>
