--- a/4_jquery/jyanken/index.html
+++ b/4_jquery/jyanken/index.html
@@ -11,7 +11,7 @@
 
 
       <div class="hand">
-        <img src="img/gu.png" id="gu" alt="グー" width="300px">
+        <img src="img/gu.png" id="gu" alt="グー" width="300px" disabled >
       </div>
 
       <div class="hand">
@@ -22,12 +22,13 @@
         <img src="img/pa.png" id="pa" alt="パー" width="300px">
       </div>
 
-      <br>
+      <div class="result" id="result">
+        <p id=display ><strong></strong></p>
+      </div><br>
 
       <div class="retry">
-          <img src="img/koushin.png" id="retry" alt="リセット" onclick="">
+          <img src="img/koushin.png" id="retry" type="reset" alt="リセット" onclick="">
       </div>
-
 
 
   <!-- </div> -->
