--- a/4_jquery/jyanken/index.html
+++ b/4_jquery/jyanken/index.html
@@ -9,9 +9,15 @@
 
     <!-- <div class="hands"> -->
 
+    <!--player1 hands-->
+      <h3 class="player1">
+        <strong>Plyer Hands</strong>
+      </h3>
+
+
 
       <div class="hand">
-        <img src="img/gu.png" id="gu" alt="グー" width="300px" disabled >
+        <img src="img/gu.png" id="gu","sampleBlink" alt="グー" width="300px" disabled >
       </div>
 
       <div class="hand">
@@ -22,10 +28,35 @@
         <img src="img/pa.png" id="pa" alt="パー" width="300px">
       </div>
 
+
+
+      <!--結果表示-->
       <div class="result" id="result">
-        <p id=display ><strong></strong></p>
+        <p id=display style="color:red; font-size:75px; margin:0;"><strong></strong></p>
       </div><br>
 
+
+      <h3 class="com">
+        <strong>Computer Hands</strong>
+      </h3>
+
+      <!--computer hands-->
+      <div class="comHand">
+        <img src="img/gu.png" id="comGu","sampleBlink" alt="グー" width="300px" disabled >
+      </div>
+
+      <div class="comHand">
+        <img src="img/choki.png" id="comChoki" alt="チョキ"width="300px" >
+      </div>
+
+      <div class="comHand">
+        <img src="img/pa.png" id="comPa" alt="パー" width="300px">
+      </div>
+
+
+
+
+      <!--リセットボタン-->
       <div class="retry">
           <img src="img/koushin.png" id="retry" type="reset" alt="リセット" onclick="">
       </div>
