--- a/4_jquery/jyanken/index.html
+++ b/4_jquery/jyanken/index.html
@@ -11,22 +11,19 @@
 
     <!--player1 hands-->
       <h3 class="player1">
-        <strong>Plyer Hands</strong>
+        <strong>Player Hands</strong>
       </h3>
-
-
-
+      
       <div class="hand">
-        <img src="img/gu.png" id="gu","sampleBlink" alt="グー" width="300px" disabled >
+        <img src="img/gu.png" id="gu","sampleBlink" alt="グー" disabled >
       </div>
-
       <div class="hand">
         <img src="img/choki.png" id="choki" alt="チョキ"width="300px" >
       </div>
-
       <div class="hand">
         <img src="img/pa.png" id="pa" alt="パー" width="300px">
       </div>
+
 
 
 
